# ComfyUI-DD-Translation

./: LICENSE  LocaleMap.js  MenuTranslate.js  README.md  __init__.py  main.js  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: 分类翻译指南.md  节点翻译指南.md  设置菜单翻译指南.md
docs（翻译示例文件）/: 分类翻译展示.json  节点翻译展示.json  设置翻译展示.json
ja-JP/: menu.json
js/: MenuTranslate.js  main.js  utils.js
ko-KR/: Menu.json
ru-RU/: Menu.json
zh-CN/Categories/: ComfyUI-Crystools.json  ComfyUI-Inspire-Pack.json  ComfyUI-KJNodes.json  ComfyUI_Comfyroll_CustomNodes.json  Internal.json  Other.json  comfy_mtb.json
zh-CN/Menus/: AIGODLIKE-ComfyUI-Translation.json  ComfyUI-Crystools.json  ComfyUI-Custom-Scripts.json  ComfyUI-KJNodes.json  ComfyUI-Manager.json  ComfyUI-VideoHelperSuite.json  Internal.json  cg-use-everywhere.json  comfy_mtb.json  rgthree-comfy.json
zh-CN/Nodes/: ComfyUI-Detail-Daemon.json  ComfyUI-Easy-Use.json  ComfyUI-GGUF.json  ComfyUI-Inspire-Pack.json  ComfyUI-VideoHelperSuite.json  ComfyUI-WanVideoWrapper.json  ComfyUI_LayerStyle_Advance.json  Comfyui-LG_GroupExecutor.json  Efficiency Nodes.json  PixelOE.json  internal.json  rgthree-comfy.json
zh-TW/: Menu.json
翻译贡献指南/: 分类翻译指南.md  节点翻译指南.md  设置菜单翻译指南.md
